force-app/main/default/objects/Trade__c/fields/BuyCurrency__c.field-meta.xml
<CustomField>
    <fullName>BuyCurrency__c</fullName>
    <label>Buy Currency</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>