force-app/main/default/objects/Trade__c/validationRules/SellAmountCantBeZero.validationRule-meta.xml
<ValidationRule>
    <fullName>SellAmountCantBeZero</fullName>
    <active>true</active>
    <errorConditionFormula>SellAmount__c = 0</errorConditionFormula>
    <errorDisplayField>SellAmount__c</errorDisplayField>
    <errorMessage>Sell Amount must be greater than 0!</errorMessage>
</ValidationRule>