force-app/main/default/objects/Trade__c/listViews/TradeReviewers_Trade.listView-meta.xml
<ListView>
    <fullName>TradeReviewers_Trade</fullName>
    <filterScope>Queue</filterScope>
    <label>Trade Reviewers</label>
    <queue>TradeReviewers</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>